# fastfps

.devcontainer/: devcontainer.json
.github/workflows/: oj.yml  unittest.yml
.verify-helper/: config.toml
src/: fft.hpp  math.hpp  modint.hpp  modint8.hpp  modvec.hpp  simd.hpp  types.hpp
src/fastfps/: fft.hpp  math.hpp  modint.hpp  modint8.hpp  modvec.hpp  types.hpp
test/: CMakeLists.txt
test/benchmark/: fft_benchmark.cpp
test/oj/: convolution.test.cpp  find_linear_recurrence.cpp  find_linear_recurrence.test.cpp  inv.test.cpp
test/unittest/: CMakeLists.txt  fft_test.cpp  math_test.cpp  modint8_test.cpp  modint_test.cpp  modvec_test.cpp  simd_test.cpp
test/unittest/testutil/: random.hpp
